# classifier

./: LICENCE.txt  README.md  dumb.py  pyproject.toml
src/classifier/: __init__.py  classifierCircle.py  classifierLinear.py  classifierSimpleY.py  cloud.py
test/: test_classification.py
