[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "classifier"
version = "2024.0.0"
dependencies = [
  "numpy>2.0.2",
  "matplotlib>3.9.2",
]
requires-python = ">=3.9.6"
authors = [
    {name = "Ruying JI", email = "ruying.ji@etu.imt-nord-europe.fr"},
    {name = "German Andres Leonardo Urbina Guiterrez", email = "german.guiterrez@etu.imt-nord-europe.fr"}
]
description = "A Python project providing circular, linear, and Y-axis threshold classifiers for 2D data classification."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["classification", "2D data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/RuyingJI/classifier"
Repository = "https://github.com/RuyingJI/classifier.git"